added sponsors section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Influencer Product</title>
 </head>
+
 <body>
     <nav>
         <div class="nav-title">Influencer products</div>
@@ -22,13 +24,34 @@
         <div class="header-left">
             <h1 class="header-title">Start your Journey as <br>
                 Influencer</h1>
-            <p class="header-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br>vestibulum sed scelerisque eros. Lectus faucibus.</p>
-            <button class="preebook-btn">Preebook now  <img src="icons/arrow-forward 1.svg" class="arrow" alt=""></button>
+            <p class="header-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br>vestibulum
+                sed scelerisque eros. Lectus faucibus.</p>
+            <button class="preebook-btn">Preebook now <img src="icons/arrow-forward 1.svg" class="arrow"
+                    alt=""></button>
         </div>
         <div class="header-right">
             <img src="/images/Circle design.svg" alt="">
             <img src="/images/main-camera.png" alt="" class="main-camera-img">
         </div>
     </header>
+
+    <!-- ============ SPONSOR SECTION========== -->
+    <div class="line"></div>
+    <div class="sponsors-container">
+        <div class="sponsors"><img src="/logos/Alibaba.svg" alt=""></div>
+        <div class="sponsors"><img src="/logos/Amazon.svg" alt=""></div>
+        <div class="sponsors"><img src="/logos/Daraz.pk Logo.svg" alt=""></div>
+        <div class="sponsors"><img src="/logos/Ebay.svg" alt=""></div>
+        <div class="sponsors"><img src="/logos/Rakuten.svg" alt=""></div>
+        <div class="sponsors"><img src="/logos/Walmart.svg" alt=""></div>
+        <div class="sponsors"><img src="/logos/Target.svg" alt=""></div>
+    </div>
+    <div class="line"></div>
+
+
+
+
+
 </body>
+
 </html>
