--- a/index.html
+++ b/index.html
@@ -48,6 +48,74 @@
     </div>
     <div class="line"></div>
 
+    <main>
+        <h1>Popular Collection</h1>
+<div class="product-container">
+        <div class="card">
+            <img src="/images/tripod.png" alt="" class="product-img">
+            <h1 class="product-name">Flex tripod</h1>
+            <h3 class="product-price">$50.48</h3>
+            <p class="product-description">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="card">
+            <img src="/images/mic.png" alt="" class="product-img">
+            <h1 class="product-name">microphone</h1>
+            <h3 class="product-price">$120.25</h3>
+            <p class="product-description">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="card">
+            <img src="/images/airpod.png" alt="" class="product-img">
+            <h1 class="product-name">Airbuds</h1>
+            <h3 class="product-price">$100.00</h3>
+            <p class="product-description">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="card">
+            <img src="/images/drone.png" alt="" class="product-img">
+            <h1 class="product-name">Drone</h1>
+            <h3 class="product-price">$980.25</h3>
+            <p class="product-description">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="card">
+            <img src="/images/lights.png" alt="" class="product-img">
+            <h1 class="product-name">Light Setup</h1>
+            <h3 class="product-price">$1200.00</h3>
+            <p class="product-description">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="card">
+            <img src="/images/setup.png" alt="" class="product-img">
+            <h1 class="product-name">Photoshoot set</h1>
+            <h3 class="product-price">$820.40</h3>
+            <p class="product-description">Wordwide shifting available
+                Buyers protection possible!</p>
+        </div>
+        <div class="card">
+            <img src="/images/camera.png" alt="" class="product-img">
+            <h1 class="product-name">Vlogging Camera</h1>
+            <h3 class="product-price">$1800.80</h3>
+            <p class="product-description">Wordwide shifting available
+Buyers protection possible!</p>
+        </div>
+        <div class="card">
+            <img src="/images/single-light.png" alt="" class="product-img">
+            <h1 class="product-name">Green Screen</h1>
+            <h3 class="product-price">$25.48</h3>
+            <p class="product-description">Wordwide shifting available
+Buyers protection possible!</p>
+        </div>
+        <div class="card">
+            <img src="/images/action.png" alt="" class="product-img">
+            <h1 class="product-name">Action Camera</h1>
+            <h3 class="product-price">$380.00</h3>
+            <p class="product-description">Wordwide shifting available
+Buyers protection possible!</p>
+        </div>
+    </div>
+    </main>
 
 
 
