--- a/index.html
+++ b/index.html
@@ -114,9 +114,20 @@ Buyers protection possible!</p>
             <p class="product-description">Wordwide shifting available
 Buyers protection possible!</p>
         </div>
-    </div>
+     </div>
+        <h4 class="see-more">See More  <img src="/icons/Group.svg" alt=""></h4>
     </main>
 
+    <!-- ==============bottom section============ -->
+
+    <div class="bottom-section">
+        <img src="/images/gear.png" alt="">
+        <div class="featured-product-section">
+            <h1>Featured products at one place</h1>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <button class="join-now-btn">Join Now <img src="/icons/arrow-forward 1.svg" alt=""></button>
+        </div>
+    </div>
 
 
 
