debugged and completed

--- a/index.html
+++ b/index.html
@@ -50,72 +50,74 @@
 
     <main>
         <h1>Popular Collection</h1>
-<div class="product-container">
-        <div class="card">
-            <img src="/images/tripod.png" alt="" class="product-img">
-            <h1 class="product-name">Flex tripod</h1>
-            <h3 class="product-price">$50.48</h3>
-            <p class="product-description">Wordwide shifting available
-                Buyers protection possible!</p>
+        <div class="product-container">
+            <div class="card">
+                <img src="/images/tripod.png" alt="" class="product-img">
+                <h1 class="product-name">Flex tripod</h1>
+                <h3 class="product-price">$50.48</h3>
+                <p class="product-description">Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="/images/mic.png" alt="" class="product-img">
+                <h1 class="product-name">microphone</h1>
+                <h3 class="product-price">$120.25</h3>
+                <p class="product-description">Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="/images/airpod.png" alt="" class="product-img">
+                <h1 class="product-name">Airbuds</h1>
+                <h3 class="product-price">$100.00</h3>
+                <p class="product-description">Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="/images/drone.png" alt="" class="product-img">
+                <h1 class="product-name">Drone</h1>
+                <h3 class="product-price">$980.25</h3>
+                <p class="product-description">Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="/images/lights.png" alt="" class="product-img">
+                <h1 class="product-name">Light Setup</h1>
+                <h3 class="product-price">$1200.00</h3>
+                <p class="product-description">Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="/images/setup.png" alt="" class="product-img">
+                <h1 class="product-name">Photoshoot set</h1>
+                <h3 class="product-price">$820.40</h3>
+                <p class="product-description">Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="/images/camera.png" alt="" class="product-img">
+                <h1 class="product-name">Vlogging Camera</h1>
+                <h3 class="product-price">$1800.80</h3>
+                <p class="product-description">Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="/images/single-light.png" alt="" class="product-img">
+                <h1 class="product-name">Green Screen</h1>
+                <h3 class="product-price">$25.48</h3>
+                <p class="product-description">Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="/images/action.png" alt="" class="product-img">
+                <h1 class="product-name">Action Camera</h1>
+                <h3 class="product-price">$380.00</h3>
+                <p class="product-description">Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            
         </div>
-        <div class="card">
-            <img src="/images/mic.png" alt="" class="product-img">
-            <h1 class="product-name">microphone</h1>
-            <h3 class="product-price">$120.25</h3>
-            <p class="product-description">Wordwide shifting available
-                Buyers protection possible!</p>
-        </div>
-        <div class="card">
-            <img src="/images/airpod.png" alt="" class="product-img">
-            <h1 class="product-name">Airbuds</h1>
-            <h3 class="product-price">$100.00</h3>
-            <p class="product-description">Wordwide shifting available
-                Buyers protection possible!</p>
-        </div>
-        <div class="card">
-            <img src="/images/drone.png" alt="" class="product-img">
-            <h1 class="product-name">Drone</h1>
-            <h3 class="product-price">$980.25</h3>
-            <p class="product-description">Wordwide shifting available
-                Buyers protection possible!</p>
-        </div>
-        <div class="card">
-            <img src="/images/lights.png" alt="" class="product-img">
-            <h1 class="product-name">Light Setup</h1>
-            <h3 class="product-price">$1200.00</h3>
-            <p class="product-description">Wordwide shifting available
-                Buyers protection possible!</p>
-        </div>
-        <div class="card">
-            <img src="/images/setup.png" alt="" class="product-img">
-            <h1 class="product-name">Photoshoot set</h1>
-            <h3 class="product-price">$820.40</h3>
-            <p class="product-description">Wordwide shifting available
-                Buyers protection possible!</p>
-        </div>
-        <div class="card">
-            <img src="/images/camera.png" alt="" class="product-img">
-            <h1 class="product-name">Vlogging Camera</h1>
-            <h3 class="product-price">$1800.80</h3>
-            <p class="product-description">Wordwide shifting available
-Buyers protection possible!</p>
-        </div>
-        <div class="card">
-            <img src="/images/single-light.png" alt="" class="product-img">
-            <h1 class="product-name">Green Screen</h1>
-            <h3 class="product-price">$25.48</h3>
-            <p class="product-description">Wordwide shifting available
-Buyers protection possible!</p>
-        </div>
-        <div class="card">
-            <img src="/images/action.png" alt="" class="product-img">
-            <h1 class="product-name">Action Camera</h1>
-            <h3 class="product-price">$380.00</h3>
-            <p class="product-description">Wordwide shifting available
-Buyers protection possible!</p>
-        </div>
-     </div>
-        <h4 class="see-more">See More  <img src="/icons/Group.svg" alt=""></h4>
+        <h4 class="see-more">See More <img src="/icons/Group.svg" alt=""></h4>
+        
     </main>
 
     <!-- ==============bottom section============ -->
@@ -124,10 +126,29 @@ Buyers protection possible!</p>
         <img src="/images/gear.png" alt="">
         <div class="featured-product-section">
             <h1>Featured products at one place</h1>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis
+                enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
             <button class="join-now-btn">Join Now <img src="/icons/arrow-forward 1.svg" alt=""></button>
         </div>
     </div>
+
+    <!-- ============ FOOTER SECTION =========== -->
+
+    <footer>
+        <h1 class="footer-title">Influencer products</h1>
+        <p class="footer-para">Copyright © 2020 influencer products</p>
+        <p class="footer-para">All rights reserved</p>
+
+        <div class="footer-icon">
+            <img src="/footer-icons/Instagram.svg" alt="">
+            <img src="/footer-icons/Dribbble.svg" alt="">
+            <img src="/footer-icons/Twitter.svg" alt="">
+            <img src="/footer-icons/Youtube.svg" alt="">
+        </div>
+
+
+
+    </footer>
 
 
 
